--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "news",
   "version": "0.0.0",
   "dependencies": {
+    "async": "^0.9.0",
     "connect-modrewrite": "^0.7.5",
-    "express": "^4.2.0"
+    "express": "^4.2.0",
+    "feedparser": "^0.16.6",
+    "request": "^2.36.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
