--- a/.jshintrc
+++ b/.jshintrc
@@ -4,8 +4,9 @@
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
-  "curly": true,
+  "curly": false,
   "eqeqeq": true,
+  "eqnull": true,
   "immed": true,
   "indent": 2,
   "latedef": true,
@@ -18,7 +19,10 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
+  "validthis": true,
+  "sub": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "_": true
   }
 }
