--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "connect-modrewrite": "^0.7.5",
     "express": "^4.2.0",
     "feedparser": "^0.16.6",
-    "grunt-express-server": "^0.4.17",
     "request": "^2.36.0"
   },
   "devDependencies": {
@@ -25,6 +24,7 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
+    "grunt-express": "^1.3.5",
     "grunt-google-cdn": "~0.2.0",
     "grunt-newer": "~0.6.1",
     "grunt-ngmin": "~0.0.2",
